[package]
name = "voxelmap_cache"
version = "0.1.0"
authors = ["Gjum <code.gjum@gmail.com>"]

[dependencies]
byteorder = "~0.5"
docopt = "~0.6"
error-chain = "~0.12"
glob = "~0.2"
lazy_static = "1.3.0"
lodepng = "0.11"
nbtrs = {git="https://github.com/overviewer/nbtrs"}
rustc-serialize = "0.3"
serde = "~1.0"
serde_json = "~1.0"
threadpool = "~1.3"
zip = "~0.2"
