[package]
name = "voxelmap_cache"
version = "0.1.0"
authors = ["Gjum <code.gjum@gmail.com>"]

[dependencies]
byteorder = "~1.3"
docopt = "~1.1"
error-chain = "~0.12"
glob = "~0.3"
lazy_static = "~1.4"
lodepng = "~2.5"
nbtrs = {git="https://github.com/overviewer/nbtrs"}
rustc-serialize = "0.3"
serde = "~1.0"
serde_json = "~1.0"
threadpool = "~1.7"
zip = "~0.5"
